# django_lecture_base_board

./: .gitignore  jupyter로 django orm 가지고 놀기.ipynb  pyproject.toml
mydjango_board/mydjango_board/: settings.py
mydjango_project/: jupyter로 django orm 가지고 놀기.ipynb
mydjango_project/board/: admin.py  forms.py  models.py  urls.py  views.py
mydjango_project/board/migrations/: 0001_initial.py  0002_comment.py  0003_alter_board_content_alter_board_title.py  0004_alter_board_content_alter_board_title_and_more.py  0005_board_deleted_at.py
mydjango_project/board/templates/board/: base.html  create.html  detail.html  edit.html  header.html  index.html  layout.html
mydjango_project/mydjango_project/: settings.py  urls.py
mydjango_project/user/: urls.py  views.py
mydjango_project/user/templates/user/: login.html  profile.html  register.html
samples/: index.html
